<resources>
    <string name="app_name">Pollen</string>
    <string name="StextToday">POLLEN TODAY:</string>
    <string name="StextTomorrow">TOMORROW:</string>
    <string name="StextDayAfter">DAY AFTER:</string>
    <string name="SbuttonSave">Save</string>
    <string name="StextZip">Zip Code</string>
    <string name="SbuttonCancel">Cancel</string>
    <string name="StitleAnoush">Anoush Khan</string>
    <string name="StitleDan">Dan Strauss</string>
    <string name="SideaText">Idea: Anoush Khan</string>
    <string name="ScodeText">Code: Anoush Khan</string>
    <string name="SiconText">Icon: Dan Strauss</string>
    <string name="SbuttonGit">GitHub</string>
    <string name="SbuttonXDA">XDA</string>
</resources>
